k8s/webservice.yml
apiVersion: v1
kind: Namespace
metadata:
  name: jobman-service
  annotations:
    description: This namespace contains all the resources needed to run the Jobman webservice

---
apiVersion: v1
kind: Namespace
metadata:
  name: jobman-service-exec
  annotations:
    description: This namespace contains all the resources needed to run the jobs launched by Jobman, including the jobs themselves
---
    
apiVersion: v1
kind: Service
metadata:
  name: jobman-service
  namespace: jobman-service
spec:
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: api
  selector:
    app: jobman-service-deployment
  
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: jobman-service-deployment
  namespace: jobman-service
spec:
  selector:
    matchLabels:
      app: jobman-service-deployment
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: jobman-service-deployment
    spec:
      priorityClassName: core-services
      nodeSelector:
        chaimeleon.eu/target: core-services
      serviceAccountName: jobman-serviceaccount
      containers:
      - image: jobman-service:2.2.7
        imagePullPolicy: Always
        name: jobman-service-deployment-container
        resources:
          requests:
            memory: "4Gi"
            cpu: "1"
          limits:
            memory: "4Gi"
            cpu: "1"
        ports:
        - containerPort: 8080
          name: api
        volumeMounts:
          - name: logs
            mountPath: /var/log/jobman
          - name: webservice-configmap
            mountPath: /opt/jobman/settings.json
            subPath: settings.json
      volumes:
        - name: logs
          persistentVolumeClaim:
            claimName: jobman-service-logs
        - name: webservice-configmap
          configMap:
            defaultMode: 420
            name: webservice-config

---

kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: jobman-ingress
  namespace: jobman-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/enable-cors: 'true'
spec:
  rules:
    - host: <jobman_host>
      http:
        paths:
          - path: /jobman-service/
            pathType: Prefix
            backend:
              service:
                name: jobman-service
                port:
                  number: 8080
